forgot ./ in images

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <main>
             <div class="grid1">
                 <p class="date">April 2020</p>
-                <img src="/images/a-raisin.png" alt="" class="img1">
-                <img src="/images/a-raisin.png" alt="" class="img2">
-                <img src="/images/a-raisin.png" alt="" class="img3">
-                <img src="/images/a-raisin.png" alt="" class="img4">
+                <img src="./images/a-raisin.png" alt="" class="img1">
+                <img src="./images/a-raisin.png" alt="" class="img2">
+                <img src="./images/a-raisin.png" alt="" class="img3">
+                <img src="./images/a-raisin.png" alt="" class="img4">
                 <p class="text1">A Raisin In The Sun
                     <br>
                     April 6, 2020 - March 20, 2020
@@ -60,7 +60,7 @@
             </div>
         </main>
         <div class="grid2">
-            <img src="/images/chicago-map.gif" class="img5">
+            <img src="./images/chicago-map.gif" class="img5">
             <p class="e1">Info</p>
             <p class="e2">Shows</p>
             <p class="e3">Social</p>
