added @media to html

--- a/index.html
+++ b/index.html
@@ -25,56 +25,79 @@
         <main>
             <div class="grid1">
                 <p class="date">April 2020</p>
-                <img src="./images/a-raisin.png" alt="" class="img1">
-                <img src="./images/a-raisin.png" alt="" class="img2">
-                <img src="./images/a-raisin.png" alt="" class="img3">
+                <div class="main1 showtime">
+                    <img src="./images/a-raisin.png" alt="" class="img1">
+                    <p class="text1">A Raisin In The Sun
+                        <br>
+                        April 6, 2020 - March 20, 2020
+                        <br>
+                        Griot Theatre 233 State St Chicago,IL
+                        $75</p>
+                        <button class="but1">Read More</button>
+                </div>
+                <div class="main2 showtime">
+                    <img src="./images/a-raisin.png" alt="" class="img2">
+                    <p class="text2">A Raisin In The Sun
+                        <br>
+                        April 6, 2020 - March 20, 2020
+                        <br>
+                        Griot Theatre 233 State St Chicago,IL
+                        $75</p>
+                        <button class="but2">Read More</button>
+                </div>
+                <div class="main3 showtime">
+                    <img src="./images/a-raisin.png" alt="" class="img3">
+                    <p class="text3">A Raisin In The Sun
+                        <br>
+                        April 6, 2020 - March 20, 2020
+                        <br>
+                        Griot Theatre 233 State St Chicago,IL
+                        $75</p>
+                        <button class="but3">Read More</button>
+                    </div>
+                    <div class="main4 showtime">
                 <img src="./images/a-raisin.png" alt="" class="img4">
-                <p class="text1">A Raisin In The Sun
-                    <br>
-                    April 6, 2020 - March 20, 2020
-                    <br>
-                    Griot Theatre 233 State St Chicago,IL
-                    $75</p>
-                <p class="text2">A Raisin In The Sun
-                    <br>
-                    April 6, 2020 - March 20, 2020
-                    <br>
-                    Griot Theatre 233 State St Chicago,IL
-                    $75</p>
-                <p class="text3">A Raisin In The Sun
-                    <br>
-                    April 6, 2020 - March 20, 2020
-                    <br>
-                    Griot Theatre 233 State St Chicago,IL
-                    $75</p>
                 <p class="text4">A Raisin In The Sun
                     <br>
                     April 6, 2020 - March 20, 2020
                     <br>
                     Griot Theatre 233 State St Chicago,IL
                     $75</p>
-                <button class="but1">Read More</button>
-                <button class="but2">Read More</button>
-                <button class="but3">Read More</button>
                 <button class="but4">Read More</button>
+                    </div>
             </div>
         </main>
         <div class="grid2">
-            <img src="./images/chicago-map.gif" class="img5">
-            <p class="e1">Info</p>
-            <p class="e2">Shows</p>
-            <p class="e3">Social</p>
-            <p class="e4">chicago,IL 60611 United States</p>
-            <p class="e5">The Piano Lesson</p>
-            <p class="e6"><a href="#">Facebook</a></p>
-            <p class="e7">Example@example.com</p>
-            <p class="e8">A Raisin In The Sun</p>
-            <p class="e9"><a href="#">Twitter</a></p>
-            <p class="e10">Call Us:766-555-4488</p>
-            <p class="e11">Frame</p>
-            <p class="e12"><a href="#">Youtube</a></p>
-            <p class="e13">The Color Purple</p>
-            <p class="e14"><a href="#">Instagram</a></p>
+            <div class="pic foot">
+                <img src="./images/chicago-map.gif" class="img5">
+            </div>
+
+            <div class="info foot">
+                <p class="e1"><h3>Info</h3></p>
+                <p class="e4">chicago,IL 60611 United States</p>
+                <p class="e7">Example@example.com</p>
+                <p class="e10">Call Us:766-555-4488</p>
+
+            </div>
+            <div class="show foot">
+                <p class="e2"><h3>Shows</h3></p>
+                <p class="e5">The Piano Lesson</p>
+                <p class="e8">A Raisin In The Sun</p>
+                <p class="e11">Frame</p>
+                <p class="e13">The Color Purple</p>
+
+
+            </div>
+
+            <div class="social foot">
+                <p class="e3"><h3>Social</h3></p>
+                <p class="e6"><a href="#">Facebook</a></p>
+                <p class="e9"><a href="#">Twitter</a></p>
+                <p class="e12"><a href="#">Youtube</a></p>
+                <p class="e14"><a href="#">Instagram</a></p>
+
+            </div>
+            
         </div>
 </body>
 </html>
